# lab4.0

solver_application/: CMakeCache.txt
solver_lib/: CMakeLists.txt
